# fastapi-mvc

./: .buildinfo  .coveragerc  .dockerignore  .envrc  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Nix.mk  Poetry.mk  README.md  SECURITY.md  TAG  Vagrantfile  about.html  api.html  build.nix  changelog.html  cli.html  contributing.html  default.nix  editable.nix  flake.nix  generators.html  genindex.html  image.nix  index.html  license.html  mkdocs.yml  objects.inv  overlay.nix  poetry-env.nix  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  (+6 more)
.doctrees/: about.doctree  api.doctree  changelog.doctree  cli.doctree  contributing.doctree  environment.pickle  generators.doctree  index.doctree  license.doctree  quickstart.doctree
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  question.md
.github/workflows/: build.yml  docs.yml  image.yml  integration.yml  main.yml  nix.yml  publish.yml  release.yml  test.yml  update-flake.yml
_sources/: about.rst.txt  api.rst.txt  changelog.rst.txt  contributing.rst.txt  generators.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
charts/fastapi-mvc/: Chart.yaml  README.md  values.yaml
charts/fastapi-mvc-template/: Chart.yaml  README.md  values.yaml
docs/: about.rst  api.rst  cli.rst  conf.py  configuration.rst  create.rst  deployment.rst  development.rst  features.rst  generated-project.rst  generators.rst  index.md  index.rst  install.md  quickstart.rst
docs/deployment/: docker.md  intro.md  kubernetes.md  manually.md
docs/usage/: configuration.md  create.md  development.md
fastapi_mvc/: __init__.py  __main__.py  borg.py  constants.py  core.py  exceptions.py  version.py  wsgi.py
fastapi_mvc/actions/: __init__.py  base.py  context.py  new.py  run.py
fastapi_mvc/app/: asgi.py
fastapi_mvc/cli/: __init__.py  base.py  cli.py  click_custom.py  generate.py  new.py  run.py  update.py
fastapi_mvc/commands/: __init__.py  base.py  generate.py  install_project.py  invoker.py  new_project.py  run_generator.py  run_shell.py  run_uvicorn.py  verify_install.py
fastapi_mvc/config/: application.py  router.py
fastapi_mvc/exceptions/: __init__.py  command.py  ini.py
fastapi_mvc/generators/: __init__.py  base.py  controller.py  generator.py  loader.py  project.py  script.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  default.nix  fastapi-mvc.ini  image.nix  pyproject.toml  shell.nix
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/.github/workflows/: docs.yml  integration.yml  main.yml
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/: README.md
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/templates/: _helpers.tpl  configmap.yml  ingress.yaml  service.yaml
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/charts/{{cookiecutter.chart_name}}/templates/tests/: test-connection.yaml
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/docs/: api.rst  conf.py  index.rst
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/integration/: test_ready_endpoint.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/: test_wsgi.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/app/: conftest.py  test_asgi.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/app/exceptions/: test_http.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/app/models/: test_ready.py  test_response.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/app/utils/: test_aiohttp_client.py  test_redis.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/app/views/: test_error.py  test_ready.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/cli/: test_cli.py  test_serve.py  test_utils.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/tests/unit/cli/commands/: test_serve.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  wsgi.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/: __init__.py  asgi.py  router.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/controllers/: __init__.py  ready.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/exceptions/: __init__.py  http.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/models/: __init__.py  ready.py  response.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/utils/: __init__.py  aiohttp_client.py  redis.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/app/views/: __init__.py  error.py  ready.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/cli/: __init__.py  cli.py  serve.py  utils.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/cli/commands/: serve.py
fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/{{cookiecutter.package_name}}/config/: __init__.py  application.py  gunicorn.py  redis.py  router.py
fastapi_mvc/parsers/: __init__.py  ini.py
fastapi_mvc/template/: cookiecutter.json
fastapi_mvc_template/: __init__.py  version.py  wsgi.py
manifests/: all-redis-operator-resources.yaml
tests/: test_config.py
(+263 files in other folders)
