[tool.poetry]
name = "fastapi-mvc"
version = "0.18.0"
description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
authors = ["Radosław Szamszur <github@rsd.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastapi-mvc/fastapi-mvc"
documentation = "https://fastapi-mvc.netlify.app"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.1.3"
copier = "6.2.0"

[tool.poetry.dev-dependencies]
pytest = "~7.1.3"
pytest-cov = "~4.0.0"
flake8 = "~5.0.4"
flake8-docstrings = "~1.6.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "~22.8.0"
Sphinx = "~5.2.3"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~0.18.1"

[tool.poetry.scripts]
fastapi-mvc = "fastapi_mvc.cli.cli:cli"

[tool.poetry.urls]
"Issues" = "https://github.com/fastapi-mvc/fastapi-mvc/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
