[tool.poetry]
name = "fastapi-mvc"
version = "0.28.1"
description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
authors = ["Radosław Szamszur <github@rsd.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastapi-mvc/fastapi-mvc"
documentation = "https://fastapi-mvc.netlify.app"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.1.3"
copier = "6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<7.5"
pytest-cov = ">=4.0,<4.2"
flake8 = "~5.0.4"
flake8-docstrings = "~1.7.0"
flake8-import-order = "~0.18.2"
flake8-todo = "^0.7"
black = ">=23.1,<24.4"
mypy = ">=1.0.1,<1.5.0"
Sphinx = ">=5.3,<6.3"
Pallets-Sphinx-Themes = ">=2.0.3,<2.2.0"
myst-parser = ">=0.18.1,<1.1.0"
sphinx-click = "~4.4.0"

[tool.poetry.scripts]
fastapi-mvc = "fastapi_mvc.cli.cli:cli"
fm = "fastapi_mvc.cli.cli:cli"

[tool.poetry.urls]
"Issues" = "https://github.com/fastapi-mvc/fastapi-mvc/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "fastapi_mvc/__main__.py",
]

[tool.mypy]
python_version = '3.10'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "copier.*"
]
ignore_missing_imports = true
