[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-mvc"
version = "0.28.1"
description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
authors = [
   { name = "Radosław Szamszur", email = "github@rsd.sh" },
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastapi-mvc/fastapi-mvc"
documentation = "https://fastapi-mvc.github.io/fastapi-mvc/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]
requires-python = ">=3.10"
dependencies = [
  "click ==8.2.1",
  "copier >=9.11.3, <10",
]

[project.optional-dependencies]
test = [
  "pytest >=9.0.2, <10",
  "pytest-cov >=7.0.0, <8",
  "flake8 >=7.3.0, <8",
  "flake8-docstrings >=1.7.0, <2",
  "flake8-import-order >=0.19.2, <2",
  "flake8-todo >=0.7, <1",
  "black >=26.1.0, <27",
  "mypy >=1.19.1, <2",
]
docs = [
  "Sphinx >=5.3, <6.3",
  "Pallets-Sphinx-Themes >=2.0.3, <2.4.0",
  "myst-parser >=0.18.1, <1.1.0",
  "sphinx-click ~=4.4.0",
]

[project.scripts]
fastapi-mvc = "fastapi_mvc.cli.cli:cli"
fm = "fastapi_mvc.cli.cli:cli"

[project.urls]
"Issues" = "https://github.com/fastapi-mvc/fastapi-mvc/issues"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "fastapi_mvc"
module-root = ""

[tool.coverage.run]
omit = [
    "fastapi_mvc/__main__.py",
]

[tool.mypy]
python_version = '3.10'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "copier.*"
]
ignore_missing_imports = true
